--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 compileSdk = "34"
 minSdk = "28"
 targetSdk = "34"
-appVersion = "1.0.0"
+versionName = "1.0.0"
 versionCode = "10000"
 
 android-gradle-plugin = "8.1.2"
